adding local storage with img, still bugs

--- a/public/index.html
+++ b/public/index.html
@@ -87,160 +87,6 @@
             </div>
             <div class="content">
                 <section id="coffee-info">
-                    <div class="coffee-item-info">
-                        <div class="info-col">
-                            <div class="info-row">
-                                <span class="info-item-label">Name:</span>
-                                <span class="info-item-value">Daye Bensa</span>
-                            </div>
-                            <div class="info-row">
-                                <span class="info-item-label">Roast Level:</span>
-                                <span class="info-item-value">Light</span>
-                            </div>
-                            <div class="info-row">
-                                <span class="info-item-label">Roaster:</span>
-                                <span class="info-item-value">Jibbithelittles</span>
-                            </div>
-                            <div class="info-row special-row">
-                                <img src="src/images/hero-image.png" alt="">
-                            </div>
-                            <div class="info-row">
-                                <span class="info-item-label">Origin Country:</span>
-                                <span class="info-item-value">Ethiopia</span>
-                            </div>
-                            <div class="info-row">
-                                <span class="info-item-label">Farm:</span>
-                                <span class="info-item-value">Unknown</span>
-                            </div>
-                            <div class="info-row">
-                                <span class="info-item-label">Varietal:</span>
-                                <span class="info-item-value">Heirloom</span>
-                            </div>
-
-                        </div>
-                        <div class="info-col">
-                            <div class="info-row">
-                                <span class="info-item-label">Type:</span>
-                                <span class="info-item-value">Single Origin</span>
-                            </div>
-                            <div class="info-row">
-                                <span class="info-item-label">Roast Date:</span>
-                                <span class="info-item-value">08/04/2023</span>
-                            </div>
-                            <div class="info-row">
-                                <span class="info-item-label">Roaster Country:</span>
-                                <span class="info-item-value">Australia</span>
-                            </div>
-                            <div class="info-row special-row">
-                                <div class="special-row-1">
-                                    <span class="info-item-label">Process:</span>
-                                    <span class="info-item-value">Anaerobic Natural</span>
-                                </div>
-                                <div class="special-row-2">
-                                    <span class="info-item-label">Flavours:</span>
-                                    <span class="chips info-item-value">Strawberry</span>
-                                    <span class="chips info-item-value">Mango</span>
-                                    <span class="chips info-item-value">Floral</span>
-                                    <span class="chips info-item-value">Kiwi</span>
-                                </div>
-                                <div class="special-row-3">
-                                    <div class="info-item-wrapper">
-                                        <span class="info-item-label">Weight:</span>
-                                        <span class="info-item-value">75 Grams</span>
-                                    </div>
-                                    <div class="info-item-wrapper">
-                                        <span class="info-item-label">Price:</span>
-                                        <span class="info-item-value">$25</span>
-                                    </div>
-                                </div>
-                                <div class="special-row-4">
-                                    <span class="info-item-label">Note:</span>
-                                    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                        incididunt ut labore et dolore magna aliqua.”</p>
-                                </div>
-                            </div>
-                            <div class="info-row">
-                                <span class="info-item-label">Region:</span>
-                                <span class="info-item-value">Sidamo</span>
-                            </div>
-                            <div class="info-row">
-                                <span class="info-item-label">Producer:</span>
-                                <span class="info-item-value">Unknown</span>
-                            </div>
-                            <div class="info-row">
-                                <span class="info-item-label">Elevation:</span>
-                                <span class="info-item-value">1700 m.a.s.l</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="coffee-item-info">
-                    </div>
-                    <div class="coffee-item-info">
-                        <div class="info-col">
-                            <div class="info-row">
-                                <span class="info-item-label">Name:</span>
-                                <span class="info-item-value">Daye Bensa</span>
-                            </div>
-                            <div class="info-row">
-                                <span class="info-item-label">Roast Level:</span>
-                                <span class="info-item-value">Light</span>
-                            </div>
-                            <div class="info-row">
-                                <span class="info-item-label">Roaster:</span>
-                                <span class="info-item-value">Jibbithelittles</span>
-                            </div>
-                            <div class="info-row special-row">
-                                <img src="src/images/hero-image.png" alt="">
-                            </div>
-                            <div class="info-row">
-                                <span class="info-item-label">Origin Country:</span>
-                                <span class="info-item-value">Ethiopia</span>
-                            </div>
-                            <div class="info-row">
-                                <span class="info-item-label">Farm:</span>
-                                <span class="info-item-value">Unknown</span>
-                            </div>
-                            <div class="info-row">
-                                <span class="info-item-label">Varietal:</span>
-                                <span class="info-item-value">Heirloom</span>
-                            </div>
-
-                        </div>
-                        <div class="info-col">
-                            <div class="info-row">
-                                <span class="info-item-label">Name:</span>
-                                <span class="info-item-value">Daye Bensa</span>
-                            </div>
-                            <div class="info-row">
-                                <span class="info-item-label">Roast Level:</span>
-                                <span class="info-item-value">Light</span>
-                            </div>
-                            <div class="info-row">
-                                <span class="info-item-label">Roaster:</span>
-                                <span class="info-item-value">Jibbithelittles</span>
-                            </div>
-                            <div class="info-row special-row">
-                                <img src="src/images/hero-image.png" alt="">
-                            </div>
-                            <div class="info-row">
-                                <span class="info-item-label">Origin Country:</span>
-                                <span class="info-item-value">Ethiopia</span>
-                            </div>
-                            <div class="info-row">
-                                <span class="info-item-label">Farm:</span>
-                                <span class="info-item-value">Unknown</span>
-                            </div>
-                            <div class="info-row">
-                                <span class="info-item-label">Varietal:</span>
-                                <span class="info-item-value">Heirloom</span>
-                            </div>
-
-                        </div>
-                    </div>
-                    <!-- the hint should be the last child to match the same structure of the coffee list-->
-                    <p id="hint-text">Here's a list of all the coffee you have added so far. Click on any of them
-                        to reminisce about
-                        your favourite cup.</p>
                 </section>
                 <section id="coffee-list">
                     <h2>Coffee List.</h2>
@@ -776,7 +622,7 @@
                 <!-- a glide carousel structure -->
                 <section class="glide">
                     <div class="glide__track" data-glide-el="track">
-                        <ul class="glide__slides">
+                        <ul id="gadget-carousel" class="glide__slides">
                             <li class="glide__slide">
                                 <div class="carousel-item">
                                     <div class="flex-row">
@@ -1044,6 +890,7 @@
         </div>
     </section>
     <script src="scripts/msf-control.js"></script>
+    <script src="script.js"></script>
     <script type="module" src="glide-carousel.js"></script>
     <script type="module" src="accordion.js"></script>
     <script type="module" src="overlay-modal.js"></script>
@@ -1052,7 +899,6 @@
     <script src="navigation.js"></script>
     <script src="toggle-display.js"></script>
     <script src="custom-select.js"></script>
-    <script src="script.js"></script>
 </body>
 
 </html>
