adding delete to gadget and bug fixing

--- a/public/index.html
+++ b/public/index.html
@@ -615,7 +615,7 @@
             <div class="top-white-space"></div>
             <div class="heading">
                 <h1>Gadget.</h1>
-                <button id="add-new-gadget" class="white-border black-fill"
+                <button id="add-new-gadget" class="fill-in white-border black-fill"
                     data-a11y-dialog-show="add-gadget-dialog">Add New</button>
             </div>
             <div class="content">
@@ -623,48 +623,6 @@
                 <section class="glide">
                     <div class="glide__track" data-glide-el="track">
                         <ul id="gadget-carousel" class="glide__slides">
-                            <li class="glide__slide">
-                                <div class="carousel-item">
-                                    <div class="flex-row">
-                                        <p>Ceramic</p>
-                                        <p>Dripper</p>
-                                    </div>
-                                    <img class="color-thief-images" src="src/images/dripper-origami.png"
-                                        alt="a pink ceramic origami dripper">
-                                    <div class="flex-row">
-                                        <p>Ceramic</p>
-                                        <p>Dripper</p>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="glide__slide">
-                                <div class="carousel-item">
-                                    <div class="flex-row">
-                                        <p>Ceramic</p>
-                                        <p>Dripper</p>
-                                    </div>
-                                    <img class="color-thief-images" src="src/images/grinder-c40.png"
-                                        alt="a hand-hold coffee grinder">
-                                    <div class="flex-row">
-                                        <p>Origami</p>
-                                        <p>Fellow</p>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="glide__slide">
-                                <div class="carousel-item">
-                                    <div class="flex-row">
-                                        <p>Ceramic</p>
-                                        <p>Dripper</p>
-                                    </div>
-                                    <img class="color-thief-images" src="src/images/dripper-v60.png"
-                                        alt="a silver metal v60 dripper">
-                                    <div class="flex-row">
-                                        <p>Ceramic</p>
-                                        <p>Dripper</p>
-                                    </div>
-                                </div>
-                            </li>
                         </ul>
                     </div>
                 </section>
@@ -678,7 +636,7 @@
             <div class="dialog-content" role="dialog">
                 <div class="modal-heading">
                     <h1>New Gadget.</h1>
-                    <input type="button" class="fill-in white-fill black-border" name="close" value="Close"
+                    <input type="button" class="fill-in black-fill white-border" name="close" value="Close"
                         data-a11y-dialog-hide="add-gadget-dialog" aria-label="Close dialog">
                 </div>
                     <form action="#" id="gadget-form">
@@ -897,7 +855,6 @@
     <script type="module" src="scripts/colorthief.js"></script>
     <script type="module" src="scripts/tagify.js"></script>
     <script src="navigation.js"></script>
-    <script src="toggle-display.js"></script>
     <script src="custom-select.js"></script>
 </body>
 
